[gd_scene load_steps=6 format=3 uid="uid://dq348td67sajs"]

[ext_resource type="Texture2D" uid="uid://ceskk3wpatt56" path="res://assets/kenney_topdownTanksRedux/PNG/Retina/tank_red.png" id="1_c4w2j"]
[ext_resource type="Script" path="res://Scripts/Enemy.gd" id="1_v8lfp"]

[sub_resource type="SpriteFrames" id="SpriteFrames_auob5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_c4w2j")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hgo8k"]
size = Vector2(92, 81)

[sub_resource type="CircleShape2D" id="CircleShape2D_ji03a"]
radius = 209.289

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_v8lfp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_auob5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -2.5)
shape = SubResource("RectangleShape2D_hgo8k")
debug_color = Color(0.823529, 0.0156863, 0.219608, 0.419608)

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(76, 0)

[node name="WeaponTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="ActionTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(900, 0)
collision_mask = 2

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="BulletDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 10
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletDetector"]
shape = SubResource("CircleShape2D_ji03a")
debug_color = Color(0.654902, 0.517647, 0, 0.419608)

[connection signal="timeout" from="ActionTimer" to="." method="_on_action_timer_timeout"]
[connection signal="body_entered" from="BulletDetector" to="." method="_on_bullet_detector_body_entered"]
